--- a/PlantPlaces/WebContent/index.html
+++ b/PlantPlaces/WebContent/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 <h1>Welcome to Plant Places!!</h1>
-Promoting Plant Diversity through Education
+
+<p>Promoting Plant Diversity through Education.</p>
+
 <h1>&nbsp;</h1>
 </body>
 </html>
